--- a/style.css
+++ b/style.css
@@ -60,8 +60,11 @@ header .nav-menu ul li a:hover {
 .headline {
   display: flex;
   align-items: center;
-  margin-top: 30px;
-  height: calc(100vh - 70px);
+  height: calc(100vh - 80px);
+  background-image: url('https://wizzy-techno.netlify.app/techno_img/7hexa1dark.png');
+  background-size: 650px 650px;
+  background-repeat: no-repeat;
+  background-position: 65vw 100%;
 }
 
 .headline .social-network ul {
@@ -81,19 +84,9 @@ header .nav-menu ul li a:hover {
   transform: scale(1.2);
 }
 
-.headline .image img {
-  width: auto;
-  height: 100%;
-}
-
-.headline .social-network ul li a img {
-  width: 100%;
-  height: 100%;
-}
-
 .headline .resume {
   flex-basis: 40%;
-  padding-left: 30px;
+  padding: 0 30px;
 }
 
 .headline .resume h1 {
@@ -117,23 +110,9 @@ header .nav-menu ul li a:hover {
   font-weight: 400;
 }
 
-.headline .image {
-  position: absolute;
-  top: 120px;
-  width: 650px;
-  height: 650px;
-  right: -150px;
-  flex-grow: 1.5;
-  display: flex;
-  justify-content: flex-end;
-  background-image: url('https://wizzy-techno.netlify.app/techno_img/7hexa1dark.png');
-  background-size: 100% 100%;
-}
-
 @media screen and (max-width: 480px) {
   body {
     width: 100%;
-    max-width: 375px;
     overflow-x: hidden;
   }
 
@@ -148,8 +127,7 @@ header .nav-menu ul li a:hover {
 
   header .nav-menu .nav-button {
     display: flex;
-    width: 30px;
-    height: 30px;
+    font-size: 20px;
   }
 
   header .nav-menu .nav-button img {
@@ -160,6 +138,8 @@ header .nav-menu ul li a:hover {
     flex-direction: column;
     margin-top: 70px;
     align-items: flex-start;
+    background-position: 30px 50vh;
+    
   }
 
   .headline .social-network {
@@ -172,12 +152,5 @@ header .nav-menu ul li a:hover {
 
   .headline .social-network ul li {
     margin-right: 30px;
-  }
-
-  .headline .image {
-    top: 500px;
-    left: 0;
-    right: 0;
-    order: 2;
   }
 }
