--- a/style.css
+++ b/style.css
@@ -190,17 +190,44 @@ header .nav-menu ul li a:hover {
   line-height: 24px;
 }
 
+.my-work .works .format .categories li {
+  list-style: none;
+  padding: 5px 7px;
+  margin-right: 1rem;
+  border-radius: 2px;
+  background-color: rgba(255, 255, 255, 0.24);
+}
+
 .my-work .cards .card-featured.format .categories li {
-  font-family: 'Inter';
+  font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 15px;
   line-height: 20px;
-  color: #091E42;
+  color: #091e42;
   padding: 8px 12px;
   background: #fff;
   border: 1px solid #8993a4;
   box-sizing: border-box;
+}
+
+.my-work .works .format .see-project-btn {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  display: none;
+  width: 100%;
+  height: 58px;
+  color: #f8f8f8;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 17px;
+  line-height: 24px;
+  transition: 0.4s;
+  background-color: #f55800;
+  outline: none;
+  border: none !important;
 }
 
 .my-work .works .card-featured.format .see-project-btn {
@@ -243,33 +270,6 @@ header .nav-menu ul li a:hover {
   font-weight: 700;
   font-size: 1.5em;
   line-height: 44px;
-}
-
-.my-work .works .format .categories li {
-  list-style: none;
-  padding: 5px 7px;
-  margin-right: 1rem;
-  border-radius: 2px;
-  background-color: rgba(255, 255, 255, 0.24);
-}
-
-.my-work .works .format .see-project-btn {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  display: none;
-  width: 100%;
-  height: 58px;
-  color: #f8f8f8;
-  font-family: 'Inter', sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 17px;
-  line-height: 24px;
-  transition: 0.4s;
-  background-color: #f55800;
-  outline: none;
-  border: none !important;
 }
 
 .my-work .works .card:hover {
@@ -428,7 +428,7 @@ header .nav-menu ul li a:hover {
 
   #about-me {
     padding: 0 1rem;
-    background-position: left 70vw top 15vh;;
+    background-position: left 70vw top 15vh;
   }
 
   .about-me .resume {
