Implement Form Structure

--- a/style.css
+++ b/style.css
@@ -458,4 +458,25 @@ header .nav-menu ul li a:hover {
     align-items: center;
     padding: 0 !important;
   }
+
+  /* ------ Form -------*/
+  #form-section {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 120px 24px;
+    position: absolute;
+    width: 375px;
+    height: 845px;
+    left: 0px;
+    top: 6038px;
+  }
+  #form-text {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0px;
+    position: static;
+    width: 327px;
+  }
 }
