--- a/style.css
+++ b/style.css
@@ -22,6 +22,24 @@ button {
   cursor: pointer;
 }
 
+.font-inter {
+  font-family: 'Inter', sans-serif;
+}
+
+.font-crete {  
+  font-family: 'Crete Round', sans-serif;
+}
+
+button.see-project-btn:hover {
+  background: #fff5e1 !important;
+  border: solid 1px #f55800 !important;
+  color: #f55800 !important;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 10px 0;
+}
+
 header {
   display: flex;
   justify-content: space-between;
@@ -63,7 +81,7 @@ header .nav-menu .nav-button {
   color: #f8f8f8;
 }
 
-header .nav-menu ul li a:hover {
+header .nav-menu ul li:not(:last-child) a:hover {
   padding-bottom: 10px;
   border-bottom: solid 3px #ff6b00;
 }
@@ -99,9 +117,8 @@ header .nav-menu ul li a:hover {
   transition: 0.5s;
 }
 
-.about-me .competence .competence-list li {
+.about-me .competence .competence-list .competence-item {
   list-style: none;
-  font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 22px;
@@ -118,7 +135,6 @@ header .nav-menu ul li a:hover {
 }
 
 .my-work h1 {
-  font-family: 'Crete Round', sans-serif;
   font-weight: 400;
   font-size: 40px;
   line-height: 52px;
@@ -129,14 +145,12 @@ header .nav-menu ul li a:hover {
   font-size: 3rem;
   padding: 0 !important;
   margin: 0 !important;
-  font-family: 'Crete Round', sans-serif;
   font-weight: 400;
   color: #ff6b00;
 }
 
 .headline .resume h4 {
   font-size: 1.5rem;
-  font-family: Inter, sans-serif;
   font-weight: 500;
 }
 
@@ -151,18 +165,21 @@ header .nav-menu ul li a:hover {
 
 /* --------- Works ---------- */
 .my-work {
-  padding: 100px 100px;
+  padding: 7% 5%;
 }
 
 .my-work .grid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 2rem;
+  overflow: hidden;
+  width: 100%;
 }
 
 .my-work .cards .card {
-  width: 369px;
-  height: 435px;
+  width: 100%;
+  height: auto;
+  min-height: 435px;
   display: flex;
   position: relative;
   flex-direction: column;
@@ -178,10 +195,10 @@ header .nav-menu ul li a:hover {
 
 .my-work .cards .card-featured {
   grid-column: 1/-1;
-  height: 435px;
+  width: 100%;
   display: flex;
   position: relative;
-  justify-content: flex-end;
+  justify-content: flex-start;
   color: #091e42;
   margin-left: auto;
   margin-right: auto;
@@ -189,8 +206,16 @@ header .nav-menu ul li a:hover {
   background-size: 100% 100%;
 }
 
+.card-featured .featured-image {
+  width: 100%;
+}
+
+.card-featured .featured-image img {
+  width: 100%;
+  height: 100%;
+}
+
 .my-work .cards .format p {
-  font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -206,7 +231,6 @@ header .nav-menu ul li a:hover {
 }
 
 .my-work .cards .card-featured.format .categories li {
-  font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 15px;
@@ -227,7 +251,6 @@ header .nav-menu ul li a:hover {
   width: 100%;
   height: 58px;
   color: #f8f8f8;
-  font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 17px;
@@ -235,7 +258,7 @@ header .nav-menu ul li a:hover {
   transition: 0.4s;
   background-color: #f55800;
   outline: none;
-  border: none !important;
+  border: none ;
 }
 
 .frm-btn {
@@ -278,7 +301,6 @@ header .nav-menu ul li a:hover {
 
 .about-me .competence .competence-list li.list-title {
   position: relative;
-  font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 1.5em;
@@ -307,7 +329,7 @@ header .nav-menu ul li a:hover {
 #about-me {
   display: flex;
   flex-direction: column;
-  padding: 0 100px;
+  padding: 0 5%;
   background-color: #262626;
   color: #f4f5f7;
   background-image: url(./images/Frame.png);
@@ -321,7 +343,6 @@ header .nav-menu ul li a:hover {
 
 .about-me .resume .resume-text {
   width: 566px;
-  font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -329,7 +350,6 @@ header .nav-menu ul li a:hover {
 }
 
 #about-me .resume h1 {
-  font-family: 'Crete Round', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 3em;
@@ -342,7 +362,6 @@ header .nav-menu ul li a:hover {
   height: 48px;
   left: 12px;
   top: 12px;
-  font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 17px;
@@ -369,10 +388,149 @@ header .nav-menu ul li a:hover {
   transform: rotate(-45deg);
 }
 
-@media screen and (max-width: 480px) {
-  body {
-    width: 100%;
-    overflow-x: hidden;
+/*------------- Contact ----------------*/
+.contact {
+  display: flex;
+  justify-content: space-between;
+  padding: 100px 5% ;
+}
+
+.contact .form-text {
+  width: 40%;
+}
+
+.contact #form {
+  width: 60%;
+  padding-left: 50px;
+}
+
+.contact p.text {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 52px;
+  align-items: center;
+  color: #262626;
+}
+
+.contact form .form-container {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding: 0;
+  list-style: none;
+}
+
+.contact form .form-container .row {
+  display: flex;
+  justify-content: space-between;
+}
+
+.contact form .form-container .row li {
+  width: 45%;
+}
+
+.form-container li {
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.form_item {
+  position: static;
+  left: 0%;
+  right: 0%;
+  top: 0%;
+  bottom: 85.45%;
+  width: 100%;
+  padding-bottom: 16px;
+  padding-left: 16px;
+  border-bottom: solid 1px #dbd8d7;
+  margin-top: 39px;
+}
+
+.form_item input {
+  height: 18px;
+  width: 100%;
+  top: calc(50% - 18px / 2);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 24px;
+  display: flex;
+  align-items: center;
+  color: #979493;
+  border: none;
+  outline: none;
+}
+
+#text {
+  padding: 12px;
+  vertical-align: top;
+  margin-top: 39px;
+  width: 100%;
+  min-width: 280px;
+  height: 114px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 24px;
+  outline: none;
+  border: solid 1px #dbd8d7;
+  color: #3c3a39;
+}
+
+.frm-btn {
+  margin-top: 24px;
+}
+
+.footer-section .social-media ul {
+  list-style: none;
+  display: flex;
+}
+
+.social-media { 
+  border-top: 1px solid #dfe1e6;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.footer-section .social-media-container {
+  margin-top: 50px;
+  list-style: none;
+  font-size: 30px;
+  display: flex;
+  padding: 0;
+}
+
+.footer-section .social-media-container .item a {
+  color: #505f79;
+}
+
+.footer-section .social-media-container .item a:hover {
+  color: #f55800;
+}
+
+.footer-section .item:not(:last-child) {
+  margin-right: 20px;
+}
+
+
+
+@media screen and (max-width: 992px) {
+  .my-work .grid {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  #about-me {
+    background-position: top 100px left 70vw;
+}
+}
+@media screen and (max-width: 769px) {
+  #about-me .competence {
+    grid-template-columns: 1fr 1fr;
   }
 
   header {
@@ -411,6 +569,14 @@ header .nav-menu ul li a:hover {
 
   .headline .social-network ul li {
     margin-right: 30px;
+  }
+
+
+}
+@media screen and (max-width: 480px) {
+  body {
+    width: 100%;
+    overflow-x: hidden;
   }
 
   .my-work {
@@ -474,15 +640,20 @@ header .nav-menu ul li a:hover {
   }
 
   /* ------Form------- */
-  #form-section {
+  #contact-section {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    padding: 120px 24px;
-    position: absolute;
-    width: 375px;
-    height: 845px;
-    left: 0;
+    padding-bottom: 0;
+  }
+
+  .contact p.text {
+    font-size: 30px;
+  }
+
+  .contact #form {    
+    width: 100%;
+    overflow: hidden;
+    padding-left: 0;
   }
 
   #form-text {
@@ -490,20 +661,14 @@ header .nav-menu ul li a:hover {
     flex-direction: column;
     align-items: center;
     padding: 0;
-    width: 327px;
-    height: 216px;
+    width: 100%;
     left: 0;
     top: 0;
-    font-family: 'Inter', sans-serif;
     font-weight: 700;
     font-size: 32px;
     line-height: 44px;
     text-align: center;
     color: #172b4d;
-  }
-
-  .form {
-    margin-top: 73px;
   }
 
   .form .form-container {
@@ -512,11 +677,24 @@ header .nav-menu ul li a:hover {
     align-items: center;
     padding: 0;
     position: static;
-    width: 327px;
-    height: 330px;
-    left: 24px;
-    top: 394px;
+    width: 100%;
     list-style: none;
+  }
+
+  
+.contact form .form-container .row {
+  flex-direction: column;
+  width: 100%;
+}
+
+.contact form .form-container .row li {
+  width: 100%;
+}
+
+  .form-container li {
+    width: 100%;
+    display: flex;
+    justify-content: center;
   }
 
   .form_item {
@@ -534,11 +712,8 @@ header .nav-menu ul li a:hover {
 
   .form_item input {
     height: 18px;
-    left: 16px;
-    right: 16px;
     width: 100%;
     top: calc(50% - 18px / 2);
-    font-family: 'Inter', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 15px;
@@ -547,19 +722,22 @@ header .nav-menu ul li a:hover {
     align-items: center;
     color: #979493;
     border: none;
+    outline: none;
   }
 
   #text {
     padding: 12px;
     vertical-align: top;
     margin-top: 39px;
-    width: 327px;
+    width: 100%;
+    min-width: 280px;
     height: 114px;
-    font-family: 'Inter', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 15px;
     line-height: 24px;
+    outline: none;
+    border: solid 1px #dbd8d7;
     color: #3c3a39;
   }
 
