Implement desktop version of contact-form and footer sections

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ button.see-project-btn:hover {
   color: #f55800 !important;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5 {
   margin: 10px 0;
 }
 
