--- a/style.css
+++ b/style.css
@@ -44,11 +44,18 @@ h5 {
   margin: 10px 0;
 }
 
-/* ==============================================
-===============================================
-===============================================
-==================================================
-================================================ */
+a,
+ul,
+li {
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+}
+
+li {
+  list-style: none;
+}
+
 header {
   display: flex;
   justify-content: space-between;
@@ -71,6 +78,70 @@ header .brand a {
   font-size: 25px;
   text-decoration: none;
   color: #f8f8f8;
+}
+
+header .mobile-nav {
+  display: block;
+  position: fixed;
+  padding-top: 62px;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: #3c3a39;
+  z-index: 1000;
+}
+
+.mobile-nav .menu-list {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 8px;
+  position: absolute;
+  width: 100%;
+  height: 184px;
+  left: 24px;
+  top: 150px;
+}
+
+.mobile-nav .menu-list li {
+  width: 80%;
+  height: 56px;
+  border-radius: 8px;
+}
+
+.btn-close {
+  display: flex !important;
+  align-items: flex-start;
+  padding: 8px;
+  justify-content: center;
+
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  right: 24px;
+  font-size: 32px;
+  color: #67798E;
+  border-radius: 8px;
+}
+
+.mb-item {
+  font-family: 'Inter';
+  width: 100%;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 44px;
+  display: flex;
+  align-items: center;
+  color: #FFF5E1;
+  padding-left: 24px;
+  border-bottom: 1px solid #979493;
+}
+
+.mobile-nav .btn-close {
+  display: none;
 }
 
 .card-featured .featured-image img {
@@ -617,6 +688,10 @@ header .nav-menu ul li:not(:last-child) a:hover {
     align-items: baseline;
     padding: 7px 100px;
     background-color: #3e3c3c;
+  }
+
+  .mobile-nav {
+    display: none !important;
   }
 
   header .brand a {
