Add Mobile menu structure

--- a/style.css
+++ b/style.css
@@ -280,7 +280,7 @@ header .nav-menu .nav-button img {
 }
 
 /* ------Form------- */
-#contact-section {
+#contact-me {
   display: flex;
   flex-direction: column;
   padding-bottom: 0;
