fix Linters Errors

--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ header .mobile-nav {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 0px;
+  padding: 0;
   gap: 8px;
   position: absolute;
   width: 100%;
@@ -120,18 +120,16 @@ header .mobile-nav {
   align-items: flex-start;
   padding: 8px;
   justify-content: center;
-
   position: absolute;
   width: 40px;
   height: 40px;
   right: 24px;
   font-size: 32px;
-  color: #67798E;
+  color: #67798e;
   border-radius: 8px;
 }
 
 .mb-item {
-  font-family: 'Inter';
   width: 100%;
   font-style: normal;
   font-weight: 700;
@@ -139,7 +137,7 @@ header .mobile-nav {
   line-height: 44px;
   display: flex;
   align-items: center;
-  color: #FFF5E1;
+  color: #fff5e1;
   padding-left: 24px;
   border-bottom: 1px solid #979493;
 }
